--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "private": true,
   "devDependencies": {
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "laravel-elixir-browserify-official": "^0.1.3",
+    "sweetalert": "^2.1.0"
   },
   "dependencies": {
+    "bootstrap-auto-dismiss-alert": "^1.0.2",
     "bootstrap-sass": "^3.3.7",
     "laravel-elixir": "^6.0.0-18",
     "node-sass": "^4.9.0"
