--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "bootstrap-auto-dismiss-alert": "^1.0.2",
     "bootstrap-sass": "^3.3.7",
+    "hoek": "^5.0.3",
     "laravel-elixir": "^6.0.0-18",
     "node-sass": "^4.9.0"
   }
