--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,10 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.3.*",
         "laravelcollective/html": "^5.3.0",
-        "uxweb/sweet-alert": "^1.4"
+        "uxweb/sweet-alert": "^1.4",
+        "cviebrock/eloquent-sluggable": "4.1",
+        "unisharp/laravel-filemanager": "^1.8",
+        "intervention/image": "^2.4"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
