--- a/package.json
+++ b/package.json
@@ -1,15 +1,25 @@
 {
   "private": true,
-  "devDependencies": {
-    "gulp": "^3.9.1",
-    "laravel-elixir-browserify-official": "^0.1.3",
-    "sweetalert": "^2.1.0"
+  "scripts": {
+    "dev": "node node_modules/cross-env/dist/bin/cross-env.js NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch": "node node_modules/cross-env/dist/bin/cross-env.js NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch-poll": "node node_modules/cross-env/dist/bin/cross-env.js NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --watch-poll --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "hot": "node node_modules/cross-env/dist/bin/cross-env.js NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "production": "node node_modules/cross-env/dist/bin/cross-env.js NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
-  "dependencies": {
-    "bootstrap-auto-dismiss-alert": "^1.0.2",
+  "devDependencies": {
+    "axios": "^0.15.3",
     "bootstrap-sass": "^3.3.7",
-    "hoek": "^5.0.3",
-    "laravel-elixir": "^6.0.0-18",
-    "node-sass": "^4.9.0"
+    "jquery": "^3.1.1",
+    "laravel-mix": "^0.8.1",
+    "lodash": "^4.17.4",
+    "vue": "^2.2.2"
+  },
+  "dependecies":{
+    "laravel-echo":"^1.3.0",
+    "pusher-js  ":"^4.1.0",
+    "sweetalert": "^2.1.0",
+    "bootstrap-auto-dismiss-alert": "^1.0.2"
+
   }
 }
