--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,11 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=5.5.9",
-        "laravel/framework": "5.5.*",
+        "php": ">=7.2.0",
+        "laravel/framework": "5.6.*",
         "laravelcollective/html": "^5.5.0",
         "uxweb/sweet-alert": "^1.4",
-        "cviebrock/eloquent-sluggable": "4.3.*",
+        "cviebrock/eloquent-sluggable": "4.5.*",
         "unisharp/laravel-filemanager": "^1.8",
         "intervention/image": "^2.4"
     },
@@ -42,12 +42,10 @@
             "php artisan key:generate"
         ],
         "post-install-cmd": [
-            "Illuminate\\Foundation\\ComposerScripts::postInstall",
-            "php artisan optimize"
+            "Illuminate\\Foundation\\ComposerScripts::postInstall"
         ],
         "post-update-cmd": [
-            "Illuminate\\Foundation\\ComposerScripts::postUpdate",
-            "php artisan optimize"
+            "Illuminate\\Foundation\\ComposerScripts::postUpdate"
         ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
